--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#about">Lab 1</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href=lab1.html>Lab 2</a>
+          <a class="nav-link" href=lab1.md>Lab 2</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Lab 3</a>
