--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
+                                <li class="nav-item">
+          <a class="nav-link" href="#about">Lab 1</a>
+        </li>
                             </div>
                         </a>
                     </div>
