--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
                         <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Project Name">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
-                                <li class="nav-item">
-          <a class="nav-link" href="#about">Lab 1</a>
-        </li>
+                               <div class="project-category text-white-50">Category</div>
+                                <div <a class="nav-link" href="#about">Lab 1</a></div>
                             </div>
                         </a>
                     </div>
