--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                <div class="project-category text-white-50">Category</div>
-                                <div <a class="nav-link" href="#about">Lab 1</a></div>
+                               <div class="project-name">Lab 1</div>
                             </div>
                         </a>
                     </div>
