--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                <div class="project-category text-white-50">Category</div>
-                               <div class="project-name">Lab 1</div>
+                               <!-- <div class="project-name">Lab 1</div> -->
                             </div>
                         </a>
                     </div>
