--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
                         <!-- <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Lab 1"> -->
                         <a class="nav-link" href="lab1.html">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
+                            
+                            <!-- <div class="portfolio-box-caption">
                                <div class="project-category text-white-50">Category</div>
-                               <!-- <div class="project-name">Lab 1</div> -->
-                            </div>
+                               <div class="project-name">Lab 1</div> 
+                            </div> -->
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
