--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="Lab 1">
-                        <a class="nav-link" href="lab1.html">
+                        <a class="portfolio-box" href="lab1.html" title="Lab 1">
+                        <!-- <a class="nav-link" href="lab1.html"> -->
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             
                             <!-- <div class="portfolio-box-caption">
