--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" href="#portfolio">Find Out More</a>
                     </div>
                 </div>
             </div>
@@ -97,13 +97,9 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="lab1.html" title="Lab 1">
-                        <!-- <a class="nav-link" href="lab1.html"> -->
+                        <!-- <a class="portfolio-box" href="lab1.html" title="Lab 1"> -->
+                        <a class="nav-link" href="lab1.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
