--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="font-weight-bold">Tiffany's ECE 4160 Fast Robots Website!<hr class="divider" />
+                        <h1 class="font-weight-bold">Tiffany's Fast Robots<hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#portfolio">Find Out More</a>
+                        <p class="mb-5">Documentation of labs for ECE 4160 at Cornell</p>
+                        <a class="btn btn-primary btn-xl" href="#portfolio">Go to labs</a>
                     </div>
                 </div>
             </div>
@@ -83,10 +83,10 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <h2 class="text-white mt-0">We've got what you need!</h2>
+                        <h2 class="text-white mt-0">image</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-                        <a class="btn btn-light btn-xl" href="#services">Get Started!</a>
+                        <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a concentration in robotics at Cornell </p>
+                        <a class="btn btn-light btn-xl" href="#services">Go to labs</a>
                     </div>
                 </div>
             </div>
