--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
                         <!-- <h2 class="text-white mt-0">image</h2> -->
-                        <img src="assets/img/chicken.jpg" alt="chicken" />
+                        <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a concentration in robotics at Cornell </p>
                         <a class="btn btn-light btn-xl" href="#services">Go to labs</a>
