--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
+        <!--
         <li class="nav-item">
           <a class="nav-link" href="#about">Lab 1</a>
         </li>
@@ -44,14 +45,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#">Lab 3</a>
         </li>
+        -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
+            <a class="dropdown-item" href=lab1.html>Lab 1</a>
+            <a class="dropdown-item" href="#">Lab 2</a>
+            <a class="dropdown-item" href="#">Lab 3</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Separated link</a>
+            <a class="dropdown-item" href="#about">About me</a>
           </div>
         </li>
       </ul>
@@ -87,7 +89,7 @@
                         <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a concentration in robotics at Cornell </p>
-                        <a class="btn btn-light btn-xl" href="#services">Go to labs</a>
+                        <a class="btn btn-light btn-xl" href="#portfolio">Go to labs</a>
                     </div>
                 </div>
             </div>
