--- a/lab1.html
+++ b/lab1.html
@@ -70,15 +70,30 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="font-weight-bold">Tiffany's Fast Robots<hr class="divider" />
+                        <h1 class="font-weight-bold">Lab 1<hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="mb-5">Documentation of labs for ECE 4160 at Cornell</p>
-                        <a class="btn btn-primary btn-xl" href="#portfolio">Go to labs</a>
+                        <p class="mb-5">The Artemis Board</p>
+                        <a class="btn btn-primary btn-xl" href="#portfolio">Go to lab</a>
                     </div>
                 </div>
             </div>
         </header>
+            
+        <!-- About-->
+        <section class="page-section bg-primary" id="about">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="col-lg-8 text-center">
+                        <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
+                        <hr class="divider divider-light" />
+                        <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
+                            Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
+                            serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
+                    </div>
+                </div>
+            </div>
+        </section>
             
         <!-- Footer-->
         <footer class="bg-light py-5">
