--- a/lab1.html
+++ b/lab1.html
@@ -35,17 +35,6 @@
             <span class="visually-hidden">(current)</span>
           </a>
         </li>
-        <!--
-        <li class="nav-item">
-          <a class="nav-link" href="#about">Lab 1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href=lab1.html>Lab 2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lab 3</a>
-        </li>
-        -->
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
           <div class="dropdown-menu">
@@ -87,6 +76,43 @@
                     <div class="col-lg-8 text-center">
                         <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
+                        
+                        <div class="card mb-3">
+                          <h3 class="card-header">Card header</h3>
+                          <div class="card-body">
+                            <h5 class="card-title">Special title treatment</h5>
+                            <h6 class="card-subtitle text-muted">Support card subtitle</h6>
+                          </div>
+                          <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                            <rect width="100%" height="100%" fill="#868e96"></rect>
+                            <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
+                          </svg>
+                          <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                          </div>
+                          <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Cras justo odio</li>
+                            <li class="list-group-item">Dapibus ac facilisis in</li>
+                            <li class="list-group-item">Vestibulum at eros</li>
+                          </ul>
+                          <div class="card-body">
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                          </div>
+                          <div class="card-footer text-muted">
+                            2 days ago
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-body">
+                            <h4 class="card-title">Card title</h4>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                          </div>
+                        </div>
+                        
                         <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
                             Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
                             serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
