--- a/lab1.html
+++ b/lab1.html
@@ -83,19 +83,24 @@
                               <h5 class="mb-1">List group item heading</h5>
                               <small>3 days ago</small>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <p class="mb-1">The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
+                            Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
+                            serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.</p>
                             <small>Donec id elit non mi porta.</small>
                           </a>
+                            <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">List group item heading</h5>
                               <small class="text-muted">3 days ago</small>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <p class="mb-1">The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
+                            Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
+                            serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.</p>
                             <small class="text-muted">Donec id elit non mi porta.</small>
                           </a>
                         </div>
-                        
+                        <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
                             Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
                             serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
