--- a/lab1.html
+++ b/lab1.html
@@ -77,30 +77,13 @@
                         <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
                         
-                        <div class="list-group">
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">List group item heading</h5>
-                              <small>3 days ago</small>
-                            </div>
-                            <p class="mb-1">The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
-                            Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
-                            serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.</p>
-                            <small>Donec id elit non mi porta.</small>
-                          </a>
-                            <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-                            <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">List group item heading</h5>
-                              <small class="text-muted">3 days ago</small>
-                            </div>
-                            <p class="mb-1">The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
-                            Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
-                            serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone.</p>
-                            <small class="text-muted">Donec id elit non mi porta.</small>
-                          </a>
-                        </div>
-                        <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
+                        <h2>Example body text</h2>
+                        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                        <p><small>This line of text is meant to be treated as fine print.</small></p>
+                        <p>The following is <strong>rendered as bold text</strong>.</p>
+                        <p>The following is <em>rendered as italicized text</em>.</p>
+                        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+
                         <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
                             Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
                             serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
