--- a/lab1.html
+++ b/lab1.html
@@ -77,12 +77,12 @@
                         <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
                         
-                        <h2>Example body text</h2>
-                        <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-                        <p><small>This line of text is meant to be treated as fine print.</small></p>
-                        <p>The following is <strong>rendered as bold text</strong>.</p>
-                        <p>The following is <em>rendered as italicized text</em>.</p>
-                        <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+                        <h2> class="text-white-75 mb-4">Example body text</h2>
+                        <p> class="text-white-75 mb-4">Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+                        <p> class="text-white-75 mb-4"><small>This line of text is meant to be treated as fine print.</small></p>
+                        <p> class="text-white-75 mb-4">The following is <strong>rendered as bold text</strong>.</p>
+                        <p> class="text-white-75 mb-4">The following is <em>rendered as italicized text</em>.</p>
+                        <p> class="text-white-75 mb-4">An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
 
                         <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
                             Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
