--- a/lab1.html
+++ b/lab1.html
@@ -33,6 +33,11 @@
                         <p class="text-white-75 mb-4"> The purpose of this lab is for you to setup and become familiar with the Arduino IDE and the 
                             Artemis board. After this lab, you should be comfortable programming your board, using the board LED, reading/writing 
                             serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
+                        
+                        <div class="d-grid gap-2">
+                          <button class="btn btn-lg btn-primary" type="button">Block button</button>
+                          <button class="btn btn-lg btn-primary" type="button">Block button</button>
+                        </div>
                     </div>
                 </div>
             </div>
