--- a/lab1.html
+++ b/lab1.html
@@ -35,7 +35,7 @@
                             serial messages over USB, and using the onboard temperature sensor and Pulse Density Microphone. </p>
                         
                         <div class="d-grid gap-2">
-                          <button class="btn btn-lg btn-primary" type="button">Block button</button>
+                          <button class="btn btn-lg btn-primary" type="button" href="index.html">Block button</button>
                         </div>
                     </div>
                 </div>
