--- a/lab1.html
+++ b/lab1.html
@@ -43,7 +43,14 @@
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
                               <div class="accordion-body">
-                                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the 
+                                  appropriate classes that we use to style each element. These classes control the overall appearance, as well as the 
+                                  showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. 
+                                  It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does 
+                                  limit overflow.
+                                  
+                                  <iframe width="560" height="315" src="https://www.youtube.com/embed/wSYRoG2q3cA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                                  
                               </div>
                             </div>
                           </div>
