--- a/lab1.html
+++ b/lab1.html
@@ -31,6 +31,7 @@
           
         <!-- About-->
         <section class="page-section bg-primary" id="about">
+            <p style="background-image: url('../assets/img/Grid_paper.webp');">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
