--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Tiffany's Fast Robots</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -85,10 +85,12 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
-                        <!-- <h2 class="text-white mt-0">image</h2> -->
                         <img src="assets/img/chicken.jpg" alt="chicken" width=50% height=auto/>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a concentration in robotics at Cornell </p>
+                        <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a passion for robotics at Cornell University. <br>
+                            I am majoring in ECE and minoring in Robotics, and I am on Cornell's Cup Robotics project team. <br>
+                            To see my other projects, see my <a href="https://pages.github.coecis.cornell.edu/tg382/tg382.github.io/">personal website</a>.
+                        </p>
                         <a class="btn btn-light btn-xl" href="#portfolio">Go to labs</a>
                     </div>
                 </div>
