--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
                         <hr class="divider divider-light" />
                         <p class="text-white-75 mb-4"> I'm Tiffany, a hardware engineer with a passion for robotics at Cornell University. <br>
                             I am majoring in ECE and minoring in Robotics, and I am on Cornell's Cup Robotics project team. <br>
-                            To see my other projects, see my <a href="https://pages.github.coecis.cornell.edu/tg382/tg382.github.io/">personal website</a>.
+                            To see my other projects, see my 
+                            
+                            <p class="text-success"> <a href="https://pages.github.coecis.cornell.edu/tg382/tg382.github.io/">personal website</a>.
                         </p>
                         <a class="btn btn-light btn-xl" href="#portfolio">Go to labs</a>
                     </div>
