--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </header>
 
         <!-- About-->
-        <section class="page-section bg-success" id="about">
+        <section class="page-section bg-warning" id="about">
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
