--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
                     </div>
                     <div class="col-lg-8 align-self-baseline">
                         <p class="mb-5">Documentation of labs for ECE 4160 at Cornell. <br>
-                        See my <a href="https://pages.github.coecis.cornell.edu/tg382/tg382.github.io/">Github repository</a> for code and resources. </p>
-                        https://github.com/tiffanyguo8/ECE4160
+                        See my <a href="https://github.com/tiffanyguo8/ECE4160">Github repository</a> for code and resources. </p>
                         <a class="btn btn-primary btn-xl" href="#portfolio">Go to labs</a>
                     </div>
                 </div>
