--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </li>
         -->
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Labs</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href=lab1.html>Lab 1</a>
             <a class="dropdown-item" href="#">Lab 2</a>
