--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Labs</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href=lab1.html>Lab 1</a>
-            <a class="dropdown-item" href="#">Lab 2</a>
+            <a class="dropdown-item" href=lab2.html>Lab 2</a>
             <a class="dropdown-item" href="#">Lab 3</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
