--- a/lab2.html
+++ b/lab2.html
@@ -48,8 +48,8 @@
                             <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
                             <small>Donec id elit non mi porta.</small>
                           </a>
-                          <br>
-                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+
+                          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">List group item heading</h5>
                             </div>
