--- a/lab2.html
+++ b/lab2.html
@@ -43,10 +43,13 @@
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
                             <div class="d-flex w-100 justify-content-between">
-                              <h5 class="mb-1">List group item heading</h5>
+                              <h5 class="mb-1">Prelab</h5>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                            <small>Donec id elit non mi porta.</small>
+                            <p class="mb-1">The code for this lab was run on a virtual environment on my laptop titled "FastRobots_ble", and 
+                              code for Bluetooth data transmittion was written in Arduino (for the Artemis board) and Jupyter notebook (on my laptop). 
+                              The robot uses Bluetooth Low Energy, a wireless communication protocol designed for low power at low data rates. 
+                              The Artemis board mainly acts as a peripheral device and my laptop as a central device, although both devices engage
+                              in bidirectional communication. </small>
                           </a>
                         </div>
                         <br>
