--- a/lab2.html
+++ b/lab2.html
@@ -49,10 +49,14 @@
                               code for Bluetooth data transmittion was written in Arduino (for the Artemis board) and Jupyter notebook (on my laptop). 
                               The robot uses Bluetooth Low Energy, a wireless communication protocol designed for low power at low data rates. 
                               The Artemis board mainly acts as a peripheral device and my laptop as a central device, although both devices engage
-                              in bidirectional communication. </small>
+                              in bidirectional communication.
+                                <br><br>
+                              I ran the code from ble_arduino.ino which prints the MAC address of my Artemis board to the serial monitor:
+                              </small>
                           </a>
                         </div>
                         <br>
+                        <img src="assets/img/Mac_address.jpg" alt="MAC Address" width=50% height=auto/>
                         
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
