--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" href=lab1.html>Lab 1</a>
             <a class="dropdown-item" href=lab2.html>Lab 2</a>
-            <a class="dropdown-item" href="#">Lab 3</a>
+            <a class="dropdown-item" href=lab3.html>Lab 3</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -113,13 +113,9 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab2.jpg" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg" title="Project Name">
+                     <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab3.html"> 
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab3.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
