--- a/lab2.html
+++ b/lab2.html
@@ -68,6 +68,8 @@
                           </a>
                         </div>
                         <br>
+                        <img src="assets/img/Arduino_config.png" alt="Arduino code configurations" width=70% height=auto/>
+                        <img src="assets/img/Python_config.png" alt="Python connection.yaml configurations" width=70% height=auto/>
                         
                         <div class="list-group">
                           <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
