--- a/lab2.html
+++ b/lab2.html
@@ -64,7 +64,9 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Configurations</h5>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                            <p class="mb-1">First, to establish a BLE connection between the Artemis board and my laptop, I configured the MAC
+                              address in the connections.yaml file to match the MAC address of my Artemis board. Then, I generated a unique
+                              UUID and configured the UUID of both the devices to match.</p>
                           </a>
                         </div>
                         <br>
