--- a/lab2.html
+++ b/lab2.html
@@ -122,7 +122,7 @@
                             </div>
                             <p class="mb-1">I wrote a notification handler called str_notify_handler() which handles new messages that the Artemis board
                               writes to the BLEStringCharactersitic. When my laptop is notified of a new message, it will process the message as a time
-                              value and update the global time variable with the new updated time. This is more convenient and efficientcompared to pollling 
+                              value and update the global time variable with the new updated time. This is more convenient and efficient compared to pollling 
                               for new messages using ble.receive_string(ble.uuid['RX_STRING']). </p>
                           </a>
                         </div>
@@ -135,8 +135,8 @@
                             <div class="d-flex w-100 justify-content-between">
                               <h5 class="mb-1">Get Temperature Command</h5>
                             </div>
-                            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-                            <small>Donec id elit non mi porta.</small>
+                            <p class="mb-1">Building off of the previous notification handler, I added functionality to handle time and temperature
+                              values. </p>
                           </a>
                         </div>
                         <br>
