--- a/lab3.html
+++ b/lab3.html
@@ -76,10 +76,10 @@
                               accurate regardless of the ambient lighting. </p>
                           </div>
                           <ul class="list-group list-group-flush">
-                            <li class="list-group-item">2 ToF sensors working in parallel:</li>
+                            <li class="list-group-item">2 ToF sensors working in parallel:
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/ZLLR_Xxd574" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <p class="card-text">Since I changed the address of one of the sensors during setup, there was no problem
-                              reading from two sensors in parallel.</p>
+                              reading from two sensors in parallel.</p></li>
                             <li class="list-group-item">ToF sensor speed:</li>
                               <iframe width="560" height="315" src="https://www.youtube.com/embed/Ee4Iy_cQ3P0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                 <p class="card-text">I got around 290ms between readings using this code:</p>
