--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <a class="dropdown-item" href=lab1.html>Lab 1</a>
             <a class="dropdown-item" href=lab2.html>Lab 2</a>
             <a class="dropdown-item" href=lab3.html>Lab 3</a>
+            <a class="dropdown-item" href=lab4.html>Lab 4</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#about">About me</a>
           </div>
@@ -118,13 +119,10 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab3.jpg" alt="..." />
                         </a>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg" title="Project Name">
-                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
-                            <div class="portfolio-box-caption">
-                                <div class="project-category text-white-50">Category</div>
-                                <div class="project-name">Project Name</div>
-                            </div>
+                    </div>
+                     <div class="col-lg-4 col-sm-6">
+                        <a class="nav-link" href="lab4.html"> 
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/lab3.jpg" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-4 col-sm-6">
