--- a/lab4.html
+++ b/lab4.html
@@ -68,7 +68,7 @@
                             
                         <h2>Set up the IMU</h2>
                         <p> For hardware setup, I simply connected the IMU to the Artemis using a QWICC connector and breakout board as shown below: </p>
-                            <img src="assets/img/TOF_address.png" alt="TOF sensor address" width=70% height=auto/>
+                            <img src="assets/img/IMU_hardware.jpg" alt="IMU connection" width=70% height=auto/>
                         <p> I installed the SparkFun 9DOF IMU Breakout - ICM 20948 - Arduino Library and opened the example code Example1_Basics, which displays
                             the IMU accelerometer, gyroscope, magnetometer, and temperature readings. In the setup section of this code, AD0_VAL is defined by default
                             as 1. The AD0_VAL is used to change the default address of one IMU in case multiple IMUs are connected using the same I2C bus. 
